<resources>
    <string name="app_name">PianoMeter</string>
    <string name="action_delete_inharmonicity_for_current_note">Delete inharmonicity for current note</string>
    <string name="action_paste">Paste</string>
    <string name="action_reset_measured_pitch_data">Reset measured pitch data</string>
    <string name="action_set">Set</string>
    <string name="action_clear">Clear</string>
    <string name="action_apply">Apply</string>
    <string name="action_default">Default</string>
    <string name="action_restore_defaults">Restore defaults</string>
    <string name="action_settings">Settings</string>
    <string name="symbol_cents" translatable="false">&#xA2;</string>
    <string name="symbol_hertz" translatable="false">Hz</string>
    <string name="activity_adjust_weights_title">Tuning Style (Interval Weights)</string>
    <string name="activity_calibrate_title">Calibration</string>
    <string name="activity_files_action_add">Add</string>
    <string name="activity_files_action_export">Export</string>
    <string name="activity_files_action_load">Load</string>
    <string name="activity_files_action_more">More</string>
    <string name="activity_files_action_rename">Rename</string>
    <string name="action_save">Save</string>
    <string name="activity_files_action_select">Select</string>
    <string name="activity_files_action_select_all">All</string>
    <string name="activity_files_action_select_none">None</string>
    <string name="activity_files_action_sort">Sort</string>
    <string name="activity_files_dialog_file_already_exists_message">File already exists. Overwrite?</string>
    <string name="activity_files_dialog_rename_file_title">Rename to</string>
    <string name="activity_files_error_delete_no_files_selected">No file selected</string>
    <string name="activity_files_error_exporting_file">Error exporting tuning file</string>
    <string name="activity_files_error_exporting_file_format">Error exporting file: %s</string>
    <string name="activity_files_message_file_exported">Tuning file exported</string>
    <string name="activity_files_no_tunings">You haven\'t tuned any pianos yet.\nCreate new tuning file to start tuning a piano</string>
    <string name="activity_files_overwrite_option_keep_existing">Keep existing versions</string>
    <string name="activity_files_overwrite_option_replace_existing">Overwrite existing versions</string>
    <string name="activity_files_share_dialog_title">Share File</string>
    <string name="activity_files_sort_dialog_title">Sort by</string>
    <string name="activity_files_sort_order_make_default">Make default</string>
    <string name="activity_global_settings_title">Settings</string>
    <string name="activity_help_title">Help</string>
    <string name="activity_load_tuning_style_title">Load Tuning Style</string>
    <string name="activity_load_tuning_temperament_title">Load Temperament</string>
    <string name="activity_main_chart_fft_spectrum">Frequency spectrum</string>
    <string name="activity_main_chart_inharmonicity">Inharmonicity</string>
    <string name="activity_main_chart_tuning_curve">Tuning curve</string>
    <string name="activity_main_exit_pitch_raise">EXIT PITCH RAISE</string>
    <string name="activity_main_note_switching_automatic">Automatic note switching</string>
    <string name="activity_main_note_switching_disabled">Automatic note switching disabled</string>
    <string name="activity_main_note_switching_stepwise">Stepwise note switching</string>
    <string name="activity_main_spectrum_chart">Spectrum Chart</string>
    <string name="activity_main_start_pitch_raise">START PITCH RAISE</string>
    <string name="activity_open_tuning_file_title">Open tuning file</string>
    <string name="activity_tuning_file_settings_title">Tuning file settings</string>
    <string name="activity_tuning_style_action_new_tuning">New</string>
    <string name="activity_tuning_style_action_undo">Undo</string>
    <string name="activity_tuning_style_action_use_cents">Use cents</string>
    <string name="activity_tuning_style_action_use_hertz">Use Hertz</string>
    <string name="activity_tuning_styles_rename_tuning_style_dialog_title">Rename tuning style</string>
    <string name="activity_tuning_temperament_title">Temperament</string>
    <string name="activity_upgrade_action_subscribe_to_pro">Subscribe to Pro</string>
    <string name="activity_upgrade_action_upgrade_to_plus">Upgrade to Plus</string>
    <string name="activity_upgrade_action_upgrade_to_pro">Upgrade to Pro</string>
    <string name="activity_upgrade_active_plan_plus">Plus version active</string>
    <string name="activity_upgrade_active_plan_pro">Pro version active</string>
    <string name="activity_upgrade_app_billing_unavailable">Oops! There is a problem with in-app billing. Try again later!</string>
    <string name="activity_upgrade_awaiting_payment">Awaiting payment…</string>
    <string name="activity_upgrade_description_functionality_levels">PianoMeter has three levels of functionality: Free, Plus, and Professional.</string>
    <string name="activity_upgrade_error_cannot_fetch_inventory">Oops! There is a problem with getting the available upgrades. Try again later!</string>
    <string name="activity_upgrade_error_payment_system_not_ready">Payments system is not ready yet. Make sure you have the latest Google Play Services and reliable internet connection and try again.</string>
    <string name="activity_upgrade_error_purchase_failed">Oops! There was a problem with your purchase. Make sure you have the latest Google Play Services and reliable internet connection and try again.</string>
    <string name="activity_upgrade_error_purchase_verification_failed">Oops! Your purchase could not be verified. Make sure you have the latest Google Play Services and reliable internet connection and try again.</string>
    <string name="activity_upgrade_has_pending_purchase">Please wait for the previous purchase to complete</string>
    <string name="activity_upgrade_message_one_time_purchase_format">One time purchase of %1$s</string>
    <string name="activity_upgrade_price_loading">Loading…</string>
    <string name="activity_upgrade_product_not_found">Product not found</string>
    <string name="activity_upgrade_title">Upgrade</string>
    <string name="billing_period_one_month">paid monthly</string>
    <string name="billing_period_one_week">paid weekly</string>
    <string name="billing_period_one_year">paid yearly</string>
    <string name="billing_period_six_months">paid every 6 months</string>
    <string name="billing_period_three_months">paid every 3 months</string>
    <string name="dialog_change_inharmonicity_weight_factor_message">Adjust the weight ratio for individual inharmonicity measurements vs. the best fit average inharmonicity curve. Decreasing this value will make the tuning curve look smoother, but the tuning targets won\'t align as well with the spacing of harmonics. (Default: 0.75)</string>
    <string name="dialog_change_inharmonicity_weight_factor_title">Inharmonicity weight factor</string>
    <string name="dialog_change_interval_weight_value_title">Change interval weight</string>
    <string name="dialog_change_maximum_overpull_message">Maximum overshoot to avoid breaking strings during pitch raise:</string>
    <string name="dialog_change_maximum_overpull_title">Maximum overshoot</string>
    <string name="dialog_pitch_raise_overshoot_factor_message">This multiplier can force more or less overshoot during a pitch raise. For example, increasing this to 1.25 would increase the calculated overshoot by 25%. (Default: 1.00)</string>
    <string name="dialog_pitch_raise_overshoot_factor_title">Pitch Raise Overshoot Factor</string>
    <string name="dialog_highest_midsection_title">Select the highest note in the midsection</string>
    <string name="dialog_lowest_unwound_title">Select the note with the lowest unwound (plain wire) strings</string>
    <string name="dialog_note_names_title">Note Names</string>
    <string name="dialog_piano_type_title">Please select the piano type</string>
    <string name="dialog_pitch_error_no_keys_selected">Select at least one key!</string>
    <string name="dialog_pitch_raise_title">Pitch raise</string>
    <string name="dialog_reference_frequency_error_only_digits_allowed">Enter only digits!</string>
    <string name="dialog_reference_frequency_message">Enter new frequency (Hz):</string>
    <string name="dialog_reference_frequency_title">Adjust reference frequency</string>
    <string name="dialog_show_in_info_box_title">Show in info box</string>
    <string name="evaluation_version_popup_message">NOTE: The \"free\" version of this app is primarily for evaluation, and it only allows you to tune notes on the piano between C3 and C5. To tune the entire piano you will need to buy an upgrade through an in-app purchase.</string>
    <string name="message_cents">Cents:</string>
    <string name="message_frequency">Frequency:</string>
    <string name="menu_files_option_rename">Rename</string>
    <string name="menu_files_option_copy">Copy</string>
    <string name="menu_files_option_delete">Delete</string>
    <string name="menu_files_option_open">Open</string>
    <string name="menu_files_option_share">Share</string>
    <string name="free_plan_option_automatic_note_switching">Automatic note switching</string>
    <string name="free_plan_option_automatic_note_switching_description">Automatic note detection and switching</string>
    <string name="free_plan_option_mid_range_tuning">Tune sample notes only</string>
    <string name="free_plan_option_mid_range_tuning_description">Tuning functionality for select sample notes only, mostly in the mid-range of the piano. Evaluate if a piano is roughly in tune using the graph at the bottom</string>
    <string name="plan_free_subtitle">for evaluation</string>
    <string name="plan_free_title">Free version</string>
    <string name="plan_plus_subtitle">for piano enthusiasts</string>
    <string name="plan_plus_title">Plus version</string>
    <string name="plan_pro_subtitle">for professional piano tuners</string>
    <string name="plan_pro_title">Pro version</string>
    <string name="plus_plan_option_calibrate_device">Calibrate device</string>
    <string name="plus_plan_option_calibrate_device_description">Calibrate device to an external frequency source</string>
    <string name="plus_plan_option_change_a_frequency">Change from A=440</string>
    <string name="plus_plan_option_change_a_frequency_description">Tune to frequency standards other than A=440</string>
    <string name="plus_plan_option_tune_entire_piano">Tune the entire piano</string>
    <string name="plus_plan_option_tune_entire_piano_description">Tuning functionality for the entire piano (not just the mid-range)</string>
    <string name="plus_plan_option_unequal_temperament">Unequal temperament</string>
    <string name="plus_plan_option_unequal_temperament_description">Choose from a selection of historical temperaments or create your own</string>
    <string name="pro_plan_option_everything_from_plus">Everything from Plus</string>
    <string name="pro_plan_option_everything_from_plus_description">See Plus version</string>
    <string name="pro_plan_option_pitch_raise">Pitch raise (rough tuning)</string>
    <string name="pro_plan_option_pitch_raise_description">Pitch raise functionality that calculates overshoot for a \'rough\' tuning (for pianos that are extremely flat)</string>
    <string name="pro_plan_option_tuning_files">Save/load tuning files</string>
    <string name="pro_plan_option_tuning_files_description">Save and load multiple tuning files so a piano doesn\'t need to be re-measured each time it is tuned</string>
    <string name="pro_plan_option_tuning_styles">Customize tuning styles</string>
    <string name="pro_plan_option_tuning_styles_description">Create custom tuning curves by adjusting interval weighting and stretch</string>
</resources>