<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_open"
        android:icon="@drawable/ic_files_open"
        android:title="@string/menu_files_option_open" />

    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_files_copy"
        android:title="@string/menu_files_option_copy" />

    <item
        android:id="@+id/action_rename"
        android:icon="@drawable/ic_files_rename"
        android:title="@string/menu_files_option_rename" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_files_delete"
        android:title="@string/menu_files_option_delete" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_files_share"
        android:title="@string/menu_files_option_share" />

    <item
        android:id="@+id/action_export"
        android:icon="@drawable/ic_files_export"
        android:title="@string/activity_files_action_export" />

</menu>